# extract-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_tables_and_provenance.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  documents.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: base.py  session.py
backend/app/database/models/: __init__.py  document.py  extraction.py  refresh_token.py  user.py
backend/app/middleware/: security.py
backend/app/schemas/: auth.py  document.py  extraction.py  user.py
backend/app/services/: document_pipeline.py  evaluation.py  extraction_service.py  ocr_service.py  prompts.py  storage.py  text_extractor.py
backend/app/services/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py
backend/app/utils/: files.py
backend/scripts/: eval_prompts.py
backend/tests/: conftest.py  test_auth.py  test_documents.py  test_extraction_llm.py  test_layout_and_batch.py
backend/tests/fixtures/: resumes.json
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DocumentsTable.tsx  InvoiceExtraction.test.tsx  InvoiceExtraction.tsx  (+5 more)
(+19 files in other folders)
